fix other workflows broken from prebious PR

--- a/.github/workflows/backup-cognito-users.yaml
+++ b/.github/workflows/backup-cognito-users.yaml
@@ -11,8 +11,9 @@ jobs:
   backup-users:
     name: create backup of cognito users
     runs-on: ubuntu-20.04
-    matrix:
-      environment-name: [Biomage, HMS]
+    strategy:
+      matrix:
+        environment-name: [Biomage, HMS]
     environment: ${{ matrix.environment-name }}
     steps:
       - id: setup-node
