--- a/.github/workflows/delete-unused-step-functions.yaml
+++ b/.github/workflows/delete-unused-step-functions.yaml
@@ -29,22 +29,20 @@ jobs:
       - id: remove-old-state-machines
         name: Remove old step functions
         run: |-
-          threshold=500
-
           state_machines_list=$(aws stepfunctions list-state-machines --output text)
+          threshold=500
+          maximum=$((10000 - $threshold))
           count=$(echo $state_machines_list | wc -l)
-          too_close_to_theshold=$(($count > 10000 - $threshold))
 
-          if test $too_close_to_theshold
+          if (($count > $maximum))
           then
-            echo "$count higher than the threshold, so deleting $threshold state machines"
+            echo "$count higher than the maximum, so deleting $threshold state machines"
             echo $state_machines_list \
               | sort -k2 \
               | head -n -$threshold \
               | awk '{print $4}' \
               | xargs -I {} aws stepfunctions delete-state-machine --state-machine-arn {}
-            
-          echo "Finished deleting state machines"
+            echo "Finished deleting state machines"
           else
             echo "No state machines deleted"
           fi
@@ -54,21 +52,19 @@ jobs:
       - id: remove-old-activities
         name: Remove old activities
         run: |-
-          threshold=500
-
           activities_list=$(aws stepfunctions list-activities --output text)
+          threshold=500
+          maximum=$((10000 - $threshold))
           count=$(echo $activities_list | wc -l)
-          too_close_to_theshold=$(($count > 10000 - $threshold))
 
-          if test $too_close_to_theshold
+          if (($count > $maximum))
           then
-            echo "$count higher than the threshold, so deleting $threshold activities"
+            echo "$count higher than the maximum, so deleting $threshold activities"
             echo $activities_list \
               | sort -k2 \
               | head -n -$threshold \
               | awk '{print $2}' \
               | xargs -I {} aws stepfunctions delete-activity --activity-arn {}
-            
             echo "Finished deleting activities"
           else
             echo "No activities deleted"
