--- a/cf/delete-s3-file-lambda.yaml
+++ b/cf/delete-s3-file-lambda.yaml
@@ -12,7 +12,7 @@ Parameters:
     Description: The environment for which the lambda is created
 
 Resources:
-  DeleteSampleFileLambdaRole:
+  DeleteS3FileLambdaRole:
     Type: "AWS::IAM::Role"
     Properties:
       AssumeRolePolicyDocument:
@@ -33,6 +33,11 @@ Resources:
                   - 's3:DeleteObject'
                 Resource:
                   - Fn::Sub: "arn:aws:s3:::biomage-originals-${Environment}-${AWS::AccountId}/*"
+                  - Fn::Sub: "arn:aws:s3:::biomage-source-${Environment}-${AWS::AccountId}/*"
+                  - Fn::Sub: "arn:aws:s3:::plots-tables-${Environment}-${AWS::AccountId}/*"
+                  - Fn::Sub: "arn:aws:s3:::biomage-filtered-cells-${Environment}-${AWS::AccountId}/*"
+                  - Fn::Sub: "arn:aws:s3:::processed-matrix-${Environment}-${AWS::AccountId}/*"
+
         - PolicyName: !Sub "can-create-log-group-in-cloudwatch-${Environment}"
           PolicyDocument:
             Version: "2012-10-17"
@@ -41,7 +46,7 @@ Resources:
                 Action:
                   - "logs:CreateLogGroup"
                 Resource:
-                  - Fn::Sub: "arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/lambda/delete-sample-file-lambda-${Environment}"
+                  - Fn::Sub: "arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/lambda/delete-s3-file-lambda-${Environment}"
         - PolicyName: !Sub "can-add-logs-in-cloudwatch-${Environment}"
           PolicyDocument:
             Version: "2012-10-17"
@@ -51,14 +56,14 @@ Resources:
                   - "logs:CreateLogStream"
                   - "logs:PutLogEvents"
                 Resource:
-                  - Fn::Sub: "arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/lambda/delete-sample-file-lambda-${Environment}:*"
+                  - Fn::Sub: "arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/lambda/delete-s3-file-lambda-${Environment}:*"
 
   DeleteSampleFileLambda:
     Type: AWS::Lambda::Function
     Properties:
-      FunctionName: !Sub delete-sample-file-lambda-${Environment}
+      FunctionName: !Sub delete-s3-file-lambda-${Environment}
       Runtime: nodejs14.x
-      Role: !GetAtt DeleteSampleFileLambdaRole.Arn
+      Role: !GetAtt DeleteS3FileLambdaRole.Arn
       Handler: index.handler
       Environment:
         Variables:
@@ -68,10 +73,10 @@ Resources:
         ZipFile: |
           const AWS = require('aws-sdk');
 
-          const deleteSampleFile = (s3_path, bucketName) => {
+          const deleteS3File = (key, bucketName) => {
             const params = {
               Bucket: bucketName,
-              Key: s3_path,
+              Key: key,
             };
 
             const s3 = new AWS.S3({
@@ -88,12 +93,10 @@ Resources:
           };
 
           exports.handler = async (event, context, callback) => {
-            const { s3_path } = event;
+            const { key, bucketName } = event;
 
-            const bucketName = `biomage-originals-${process.env.CLUSTER_ENV}-${process.env.AWS_ACCOUNT_ID}`;
-
-            console.log(`== Deleting ${s3_path} from ${bucketName} ==`);
-            deleteSampleFile(s3_path, bucketName);
+            console.log(`== Deleting ${key} from ${bucketName} ==`);
+            deleteS3File(key, bucketName);
 
             callback(null, event);
           };
@@ -102,5 +105,5 @@ Resources:
   LoggingGroup:
     Type: AWS::Logs::LogGroup
     Properties:
-      LogGroupName: !Sub "/aws/lambda/delete-sample-file-lambda-${Environment}"
+      LogGroupName: !Sub "/aws/lambda/delete-s3-file-lambda-${Environment}"
       RetentionInDays: 1
