--- a/.github/workflows/delete-unused-step-functions.yaml
+++ b/.github/workflows/delete-unused-step-functions.yaml
@@ -40,6 +40,7 @@ jobs:
           then
             echo "$count higher than the maximum, so deleting $threshold state machines"
             echo $state_machines_list \
+              | sed 's/STATEMACHINES/\n STATEMACHINES/g' \
               | sort -k2 \
               | head -n -$threshold \
               | awk '{print $4}' \
@@ -65,6 +66,7 @@ jobs:
           then
             echo "$count higher than the maximum, so deleting $threshold activities"
             echo $activities_list \
+              | sed 's/ACTIVITIES/\n ACTIVITIES/g' \
               | sort -k2 \
               | head -n -$threshold \
               | awk '{print $2}' \
