--- a/cf/delete-s3-file-lambda.yaml
+++ b/cf/delete-s3-file-lambda.yaml
@@ -88,7 +88,7 @@ Resources:
                 console.log(err, err.stack);
                 return;
               }
-              console.log(`== Successfully deleted ${s3_path} ==`);
+              console.log(`== Successfully deleted ${key} from ${bucketName}==`);
             });
           };
 
