Add api permissions to test buckets

--- a/cf/irsa-api-role.yaml
+++ b/cf/irsa-api-role.yaml
@@ -85,6 +85,18 @@ Resources:
                   - !Sub "arn:aws:s3:::processed-matrix-${Environment}-${AWS::AccountId}/*"
                   - !Sub "arn:aws:s3:::biomage-source-${Environment}-${AWS::AccountId}/*"
                   - !Sub "arn:aws:s3:::biomage-originals-${Environment}-${AWS::AccountId}/*"
+                  - !Sub "arn:aws:s3:::worker-results-test-${Environment}/*"
+                  - !Sub "arn:aws:s3:::plots-tables-test-${Environment}/*"
+                  - !Sub "arn:aws:s3:::cell-sets-test-${Environment}/*"
+                  - !Sub "arn:aws:s3:::processed-matrix-test-${Environment}/*"
+                  - !Sub "arn:aws:s3:::biomage-source-test-${Environment}/*"
+                  - !Sub "arn:aws:s3:::biomage-originals-test-${Environment}/*"
+                  - !Sub "arn:aws:s3:::worker-results-test-${Environment}-${AWS::AccountId}/*"
+                  - !Sub "arn:aws:s3:::plots-tables-test-${Environment}-${AWS::AccountId}/*"
+                  - !Sub "arn:aws:s3:::cell-sets-test-${Environment}-${AWS::AccountId}/*"
+                  - !Sub "arn:aws:s3:::processed-matrix-test-${Environment}-${AWS::AccountId}/*"
+                  - !Sub "arn:aws:s3:::biomage-source-test-${Environment}-${AWS::AccountId}/*"
+                  - !Sub "arn:aws:s3:::biomage-originals-test-${Environment}-${AWS::AccountId}/*"
 
         - PolicyName: !Sub "can-upload-cell-sets-in-s3-${Environment}"
           PolicyDocument:
@@ -97,7 +109,10 @@ Resources:
                   - !Sub "arn:aws:s3:::biomage-originals-${Environment}/*"
                   - !Sub "arn:aws:s3:::cell-sets-${Environment}-${AWS::AccountId}/*"
                   - !Sub "arn:aws:s3:::biomage-originals-${Environment}-${AWS::AccountId}/*"
-
+                  - !Sub "arn:aws:s3:::cell-sets-test-${Environment}/*"
+                  - !Sub "arn:aws:s3:::biomage-originals-test-${Environment}/*"
+                  - !Sub "arn:aws:s3:::cell-sets-test-${Environment}-${AWS::AccountId}/*"
+                  - !Sub "arn:aws:s3:::biomage-originals-test-${Environment}-${AWS::AccountId}/*"
 
         - PolicyName: !Sub "can-get-object-tagging-from-s3-buckets-${Environment}"
           PolicyDocument:
@@ -108,7 +123,8 @@ Resources:
                 Resource:
                   - !Sub "arn:aws:s3:::worker-results-${Environment}/*"
                   - !Sub "arn:aws:s3:::worker-results-${Environment}-${AWS::AccountId}/*"
-
+                  - !Sub "arn:aws:s3:::worker-results-test-${Environment}/*"
+                  - !Sub "arn:aws:s3:::worker-results-test-${Environment}-${AWS::AccountId}/*"
 
         - PolicyName: !Sub "can-delete-original-files-s3-${Environment}"
           PolicyDocument:
@@ -121,6 +137,10 @@ Resources:
                   - !Sub "arn:aws:s3:::biomage-filtered-cells-${Environment}/*"
                   - !Sub "arn:aws:s3:::biomage-filtered-cells-${Environment}-${AWS::AccountId}/*"
                   - !Sub "arn:aws:s3:::biomage-originals-${Environment}-${AWS::AccountId}/*"
+                  - !Sub "arn:aws:s3:::biomage-originals-test-${Environment}/*"
+                  - !Sub "arn:aws:s3:::biomage-filtered-cells-test-${Environment}/*"
+                  - !Sub "arn:aws:s3:::biomage-filtered-cells-test-${Environment}-${AWS::AccountId}/*"
+                  - !Sub "arn:aws:s3:::biomage-originals-test-${Environment}-${AWS::AccountId}/*"
 
         - PolicyName: !Sub "can-list-s3-cell-ids-${Environment}"
           PolicyDocument:
@@ -131,6 +151,8 @@ Resources:
                 Resource:
                   - !Sub "arn:aws:s3:::biomage-filtered-cells-${Environment}"
                   - !Sub "arn:aws:s3:::biomage-filtered-cells-${Environment}-${AWS::AccountId}"
+                  - !Sub "arn:aws:s3:::biomage-filtered-cells-test-${Environment}"
+                  - !Sub "arn:aws:s3:::biomage-filtered-cells-test-${Environment}-${AWS::AccountId}"
 
         - PolicyName: !Sub "can-access-details-of-redis-cluster-${Environment}"
           PolicyDocument:
