--- a/migrations/sql-migrations/package.json
+++ b/migrations/sql-migrations/package.json
@@ -13,6 +13,8 @@
     "knex": "^1.0.3",
     "object-hash": "^2.0.3",
     "pg": "^8.7.3",
+    "sqlite": "^4.1.2",
+    "sqlite3": "^5.0.11",
     "uuidv4": "^6.2.12"
   }
 }
