--- a/cf/delete-s3-file-lambda.yaml
+++ b/cf/delete-s3-file-lambda.yaml
@@ -95,10 +95,10 @@ Resources:
 
           exports.handler = async (event, context, callback) => {
             const { key, bucketName } = event;
-            const bucketNameWithEnvironmentAndAccId = `${bucketName}-${process.env.CLUSTER_ENV}-${process.env.AWS_ACCOUNT_ID}`;
-            
+            const realBucketName = `${bucketName}-${process.env.CLUSTER_ENV}-${process.env.AWS_ACCOUNT_ID}`;
+
             console.log(`== Deleting ${key} from ${bucketName} ==`);
-            deleteS3File(key, bucketNameWithEnvironmentAndAccId);
+            deleteS3File(key, realBucketName);
 
             callback(null, event);
           };
