--- a/infra/cf-iac-secret-key.yaml
+++ b/infra/cf-iac-secret-key.yaml
@@ -4,19 +4,19 @@
 # new infrastructure is deployed.
 
 AWSTemplateFormatVersion: "2010-09-09"
-Description: Set up key for transmitting secrets between IAC and workflow initiators [managed by github.com/hms-dbmi-cellenics/iac]
+Description: Set up key for transmitting secrets between IAC and workflow initiators [managed by github.com/biomage-org/iac]
 
 Parameters:
   OrgName:
     Type: String
-    Default: hms-dbmi-cellenics
+    Default: biomage-org
     Description: The organisation to which the CI user belongs
 
 Resources:
   IACKey:
     Type: AWS::KMS::Key
     Properties:
-      Description: Key for transmitting secrets between IAC and workflow initiators [managed by github.com/hms-dbmi-cellenics/iac]
+      Description: Key for transmitting secrets between IAC and workflow initiators [managed by github.com/biomage-org/iac]
       EnableKeyRotation: true
       Enabled: true
       KeyPolicy:
