--- a/cf/cognito-case-insensitive.yaml
+++ b/cf/cognito-case-insensitive.yaml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: Set up case insensitive Cognito resources for Biomage SCP [managed by github.com/hms-dbmi-cellenics/iac]
+Description: Set up case insensitive Cognito resources for Biomage SCP [managed by github.com/biomage-org/iac]
 
 Parameters:
   Environment:
