--- a/cf/developer-access-group.yaml
+++ b/cf/developer-access-group.yaml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: Set up access rights to a given environment for development [managed by github.com/hms-dbmi-cellenics/iac]
+Description: Set up access rights to a given environment for development [managed by github.com/biomage-org/iac]
 
 Parameters:
   Environment:
