--- a/cf/irsa-worker-role.yaml
+++ b/cf/irsa-worker-role.yaml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: Set up role for the worker [managed by github.com/hms-dbmi-cellenics/iac]
+Description: Set up role for the worker [managed by github.com/biomage-org/iac]
 
 Parameters:
   Environment:
