--- a/cf/s3-v2.yaml
+++ b/cf/s3-v2.yaml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: Set up S3 buckets for Cellenics [managed by github.com/hms-dbmi-cellenics/iac]
+Description: Set up S3 buckets for Cellenics [managed by github.com/biomage-org/iac]
 
 Parameters:
   Environment:
