--- a/.github/workflows/deploy-changed-users.yaml
+++ b/.github/workflows/deploy-changed-users.yaml
@@ -22,10 +22,7 @@ jobs:
     strategy:
       matrix:
         environment-type: ${{ fromJson(needs.setup.outputs.matrix) }}
-        environment: [Biomage, HMS]
-        exclude:
-          - environment-name: HMS
-            environment-type: staging
+        environment: [Biomage]
     environment: ${{ matrix.environment-name }}
     steps:
       - id: check-secrets
