--- a/cf/cognito-case-insensitive.yaml
+++ b/cf/cognito-case-insensitive.yaml
@@ -13,7 +13,6 @@ Parameters:
 
 Conditions:
   isProd: !Equals [!Ref Environment, "production"]
-  isHMSAccount: !Equals [ !Ref AWS::AccountId, "160782110667"]
 
 Outputs:
   UserPoolId:
@@ -128,7 +127,7 @@ Resources:
         # To customize the From field, we have to provide the ARN of an SES account
         # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-emailconfiguration.html
         EmailSendingAccount: COGNITO_DEFAULT
-        ReplyToEmailAddress: !If [isHMSAccount, "alex_pickering@hms.harvard.edu", "hello@biomage.net"]
+        ReplyToEmailAddress: "hello@biomage.net"
       EnabledMfas:
         - SMS_MFA
         - SOFTWARE_TOKEN_MFA
@@ -172,4 +171,4 @@ Resources:
     Type: AWS::Cognito::UserPoolDomain
     Properties:
       UserPoolId: !Ref UserPool
-      Domain: !If [isHMSAccount, !Sub "hms-auth-${Environment}-${AWS::AccountId}", !Sub "biomage-auth-${Environment}-${AWS::AccountId}"]
+      Domain: "biomage-auth-${Environment}-${AWS::AccountId}"
