Remove unneeded references to Biomage

--- a/.github/workflows/delete-unused-step-functions.yaml
+++ b/.github/workflows/delete-unused-step-functions.yaml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        environment-name: [Biomage, HMS]
+        environment-name: [HMS]
     environment: ${{ matrix.environment-name }}
     steps:
       - id: setup-aws
@@ -29,25 +29,19 @@ jobs:
       - id: remove-old-state-machines
         name: Remove old step functions
         run: |-
-          state_machines_list=$(aws stepfunctions list-state-machines --output text)
           threshold=500
-          maximum=$((10000 - $threshold))
-          count=$(echo $state_machines_list | grep -o 'arn:aws:states:' | wc -l)
 
-          echo $count
+          state_machines_list=$(aws stepfunctions list-state-machines --output text)
+          count=$(echo $state_machines_list | wc -l)
+          too_close_to_theshold=$(($count > 10000 - $threshold))
 
-          if (($count > $maximum))
+          if test $too_close_to_theshold
           then
-            echo "$count higher than the maximum, so deleting $threshold state machines"
             echo $state_machines_list \
-              | sed 's/STATEMACHINES/\n STATEMACHINES/g' \
               | sort -k2 \
-              | head -$threshold \
+              | head -n -$threshold \
               | awk '{print $4}' \
-              | xargs -I {} aws stepfunctions delete-state-machine --state-machine-arn {}
-            echo "Finished deleting state machines"
-          else
-            echo "No state machines deleted"
+              | xargs -I {} aws stepfunctions delete-state-machine --activity-arn {}
           fi
 
       # If the activities list is too close to its limit,
@@ -55,25 +49,19 @@ jobs:
       - id: remove-old-activities
         name: Remove old activities
         run: |-
-          activities_list=$(aws stepfunctions list-activities --output text)
           threshold=500
-          maximum=$((10000 - $threshold))
-          count=$(echo $activities_list | grep -o 'arn:aws:states:' | wc -l)
 
-          echo $count
+          activities_list=$(aws stepfunctions list-activities --output text)
+          count=$(echo $activities_list | wc -l)
+          too_close_to_theshold=$(($count > 10000 - $threshold))
 
-          if (($count > $maximum))
+          if test $too_close_to_theshold
           then
-            echo "$count higher than the maximum, so deleting $threshold activities"
             echo $activities_list \
-              | sed 's/ACTIVITIES/\n ACTIVITIES/g' \
               | sort -k2 \
-              | head -$threshold \
+              | head -n -$threshold \
               | awk '{print $2}' \
               | xargs -I {} aws stepfunctions delete-activity --activity-arn {}
-            echo "Finished deleting activities"
-          else
-            echo "No activities deleted"
           fi
 
       - id: send-to-slack
