--- a/cf/canaries.yaml
+++ b/cf/canaries.yaml
@@ -13,7 +13,6 @@ Parameters:
 
 Conditions:
   isProd: !Equals [!Ref Environment, "production"]
-  isHMSAccount: !Equals [ !Ref AWS::AccountId, "160782110667"]
 
 Resources:
   CanariesBucketV2:
@@ -228,7 +227,7 @@ Resources:
     Type: 'AWS::SNS::Subscription'
     Properties:
       TopicArn: !Ref CanarySNSTopic
-      Endpoint: !If [isHMSAccount, "alex_pickering@hms.harvard.edu", "engineering@biomage.net"]
+      Endpoint: "alex_pickering@hms.harvard.edu"
       Protocol: "email"
 
   CanariesAlarm:
