--- a/.github/workflows/backup-cognito-users.yaml
+++ b/.github/workflows/backup-cognito-users.yaml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        environment-name: [Biomage, HMS]
+        environment-name: [HMS]
     environment: ${{ matrix.environment-name }}
     steps:
       - id: setup-node
